--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ body{
 	display:flex;
 	align-items: center;
 	justify-content: space-evenly;
+	flex-wrap:wrap;
 }
 .timerContainer{
 	font-size:2rem;
